# sulat

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  test_basic.py  test_transcribe.py  testing.py
boi/: transcribe.py
golem-docs/: CLAUDE.md  OBJECTIVE.md  api-documentation-errors.md  architectural-rationale.md  architecture.md  audio-transcriptions.md  design.md  initial_plan.md  keep_in_mind.md  transcription_api_calls.md
golem-docs/errorsfound/: debug_400_error.py  debug_transcribe.py  errors.md
owai/: __init__.py
package-maker/rules/: architecture.md  communication.md  development.md  package-maker-golem.md
package-maker/rules/python/: 01-python-general-rule.mdc  03-python-testing-rule.mdc  04-python-uv-venv-rule.mdc  06-python-error-handling-rule.mdc  07-python-logging-rule.mdc  09-python-template.mdc
prompt-modules/: structure_transcription.md
src/surus/: __init__.py  client.py  engines.py
sulat/: __init__.py  config.py  data_utils.py  extract.py  metrics.py  optimization_utils.py  scoring.py  text_utils.py  transcribe.py  translate.py
surus/: __init__.py  transcribe.py
tests/: __init__.py  test_api_integration.py  test_autotune.py  test_cache.py  test_extract.py  test_transcribe.py  test_translate.py
